<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".accounts.views.RegistrationFormActivity">

    <ScrollView
        android:layout_above="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:onClick="onBackPressButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_back_white"/>

            <TextView
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_margin="20dp"
                android:textSize="28sp"/>

            <TextView
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:textSize="20sp"/>

            <EditText
                android:textColorHint="@color/black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/first_name"
                android:id="@+id/firstNameEditText"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_white_background"
                android:layout_margin="20dp"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <TextView
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:textSize="20sp"/>

            <EditText
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/last_name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:id="@+id/lastNameEditText"
                android:background="@drawable/edit_text_white_background"
                android:layout_margin="20dp"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <TextView
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/select_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:textSize="20sp"/>


            <EditText
                android:drawableEnd="@drawable/ic_drop_down_gray"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ageEditText"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:focusable="false"
                android:background="@drawable/edit_text_white_background"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:onClick="onAgeClicked"
                android:hint="@string/select_age"
                android:textColorHint="@color/black"
                android:layout_height="60dp"/>

            <TextView
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/select_gender"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginStart="20dp"
                android:textSize="20sp"/>



            <RadioGroup
                android:id="@+id/genderGroup"
                android:background="@drawable/edit_text_white_background"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:buttonTint="@color/red_button_color"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/ic_male"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:buttonTint="@color/red_button_color"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/female"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/female"/>

                <RadioButton
                    android:id="@+id/othersRadioButton"
                    android:buttonTint="@color/red_button_color"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/others"/>


            </RadioGroup>


        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_alignParentBottom="true"
        android:onClick="onSignupClicked"
        android:text="@string/signup"
        android:id="@+id/signupButton"
        android:textColor="@color/white"
        android:background="@drawable/red_button_background"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</RelativeLayout>